HV-2103 Include Jakarta Validation 3.1 XSDs